5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1638_2730.log
== TEST (2019-04-15 12:52:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

a = float(input("x: "))
b = float(input("y: "))

if (x > 0 and y>0 or x<0 and y>0 ):
	mensagem = "Superiores"
else:
	(x<0 and y<0 or x>0 and y<0)
	mensagem = "Inferiores"

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (x > 0 and y>0 or x<0 and y>0 ):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:53:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if (x > 0 and y>0 or x<0 and y>0 ):
	mensagem = "Superiores"
else:
	(x<0 and y<0 or x>0 and y<0)
	mensagem = "Inferiores"

print(mensagem)
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:54:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if (x > 0 and y>0 or x<0 and y>0 ):
	mensagem = "Superiores"
else:
	(x<0 and y<0 or x>0 and y<0)
	mensagem = "Inferiores"

print(mensagem)
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:54:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if (x > 0 and y>0 or x<0 and y>0 ):
	mensagem = "Superiores"
else:
	(x<0 and y<0 or x>0 and y<0)
	mensagem = "Inferiores"

print(mensagem)
-- EXECUTION TIME:
0.194244
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
